# Parameter-Optimization-SIRIUS

./: README.md
program/: CMakeLists.txt  main.cc
program/includes/: digitalFilterOptimization.hh
program/sources/: digitalFilterOptimization.cc
